mabger-meter/force-app/main/default/objects/Opportunity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product Lines of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive Fluid Products</fullName>
            </value>
            <value>
                <fullName>BEACON AMA</fullName>
            </value>
            <value>
                <fullName>Blancett</fullName>
            </value>
            <value>
                <fullName>Concrete Fluid Products</fullName>
            </value>
            <value>
                <fullName>Coriolis</fullName>
            </value>
            <value>
                <fullName>Cox</fullName>
            </value>
            <value>
                <fullName>Data Acquisition / Management</fullName>
            </value>
            <value>
                <fullName>Dynasonics</fullName>
            </value>
            <value>
                <fullName>E-Series Electronic</fullName>
            </value>
            <value>
                <fullName>Flo-Tech</fullName>
            </value>
            <value>
                <fullName>Flow Dynamics Calibration Services</fullName>
            </value>
            <value>
                <fullName>Flow Dynamics Calibrator Products</fullName>
            </value>
            <value>
                <fullName>Galaxy</fullName>
            </value>
            <value>
                <fullName>Hedland</fullName>
            </value>
            <value>
                <fullName>HR-E</fullName>
            </value>
            <value>
                <fullName>Impeller</fullName>
            </value>
            <value>
                <fullName>Industrial Oval Gear (IOG)</fullName>
            </value>
            <value>
                <fullName>Industrial Turbo</fullName>
            </value>
            <value>
                <fullName>ModMAG/M-Series</fullName>
            </value>
            <value>
                <fullName>Monitors / Accessories</fullName>
            </value>
            <value>
                <fullName>Orion</fullName>
            </value>
            <value>
                <fullName>Preso</fullName>
            </value>
            <value>
                <fullName>ReadCenter</fullName>
            </value>
            <value>
                <fullName>Recordall</fullName>
            </value>
            <value>
                <fullName>Research Control Valves (RCV)</fullName>
            </value>
            <value>
                <fullName>Services / Technical Field Support</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Vortex</fullName>
            </value>
            <value>
                <fullName>Wyco Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>