mabger-meter/force-app/main/default/objects/Opportunity/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Description</valueSetName>
    </valueSet>
</CustomField>