mabger-meter/force-app/main/default/objects/Opportunity/fields/Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>Product_Selection__c</fullName>
    <inlineHelpText>Products selected on the web form</inlineHelpText>
    <label>Product Selection</label>
    <length>200</length>
    <type>Text</type>
</CustomField>