mabger-meter/force-app/main/default/objects/Opportunity/fields/Products_Brands_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Products_Brands_of_Interest__c</fullName>
    <description>Field to be deprecated. Need to wait until all opportunities with the field have been expired/closed to delete the field.</description>
    <label>OLD Products/Brands of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Brands_of_Interest</valueSetName>
    </valueSet>
</CustomField>