mabger-meter/force-app/main/default/objects/Opportunity/fields/Projected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Close_Date__c</fullName>
    <label>Projected Close Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>