mabger-meter/force-app/main/default/objects/Opportunity/fields/Proposal_Bid_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Bid_Expiration__c</fullName>
    <label>Proposal\Bid Expiration</label>
    <type>Date</type>
</CustomField>