mabger-meter/force-app/main/default/objects/Opportunity/fields/Proposal_Bid_Expiration_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Bid_Expiration_Reminder__c</fullName>
    <label>Proposal\Bid Expiration Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>