mabger-meter/force-app/main/default/objects/Opportunity/fields/Proposal_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Opening_Date__c</fullName>
    <inlineHelpText>If applicable</inlineHelpText>
    <label>Proposal Opening Date</label>
    <type>Date</type>
</CustomField>