mabger-meter/force-app/main/default/objects/Opportunity/fields/Proposal_Outcome_Notes__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Outcome_Notes__c</fullName>
    <label>Proposal Outcome Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>