mabger-meter/force-app/main/default/objects/Opportunity/fields/Proposal_Request_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Request_Receive_Date__c</fullName>
    <label>Proposal Request Receive Date</label>
    <type>Date</type>
</CustomField>