mabger-meter/force-app/main/default/objects/Opportunity/fields/Proposal_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Submitted_Date__c</fullName>
    <label>Proposal Submitted Date</label>
    <type>Date</type>
</CustomField>