mabger-meter/force-app/main/default/objects/Opportunity/fields/Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Type__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
            <value>
                <fullName>Piggyback</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Sole Source</fullName>
            </value>
            <value>
                <fullName>CDMA Endpoint Upgrade Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>