mabger-meter/force-app/main/default/objects/Opportunity/fields/Provided_Documents__c.field-meta.xml
<CustomField>
    <fullName>Provided_Documents__c</fullName>
    <inlineHelpText>Please select the documents being sent with the bid package</inlineHelpText>
    <label>Provided Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affidavit of Compliance</fullName>
            </value>
            <value>
                <fullName>Affidavit of Non-Collusion</fullName>
            </value>
            <value>
                <fullName>Affidavit of Warranty</fullName>
            </value>
            <value>
                <fullName>Annual Report</fullName>
            </value>
            <value>
                <fullName>Authorization to Sign</fullName>
            </value>
            <value>
                <fullName>BEACON Terms/Conditions</fullName>
            </value>
            <value>
                <fullName>Business Certificate</fullName>
            </value>
            <value>
                <fullName>Cover Letter</fullName>
            </value>
            <value>
                <fullName>EEOC/AAP</fullName>
            </value>
            <value>
                <fullName>Insurance Certificate</fullName>
            </value>
            <value>
                <fullName>Itron-Indirect Sales/FDM</fullName>
            </value>
            <value>
                <fullName>List of Board of Directors</fullName>
            </value>
            <value>
                <fullName>List of Major Shareholders</fullName>
            </value>
            <value>
                <fullName>List of Officers</fullName>
            </value>
            <value>
                <fullName>Literature</fullName>
            </value>
            <value>
                <fullName>NSF/ANSI-61 Certification Letter</fullName>
            </value>
            <value>
                <fullName>Parts List</fullName>
            </value>
            <value>
                <fullName>Parts Price List</fullName>
            </value>
            <value>
                <fullName>References</fullName>
            </value>
            <value>
                <fullName>Scrap Credit Schedule</fullName>
            </value>
            <value>
                <fullName>Tax Certificate</fullName>
            </value>
            <value>
                <fullName>W-9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>