mabger-meter/force-app/main/default/objects/Opportunity/fields/Quote_Bid_Days__c.field-meta.xml
<CustomField>
    <fullName>Quote_Bid_Days__c</fullName>
    <label>Quote/Bid Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>