mabger-meter/force-app/main/default/objects/Opportunity/fields/Quote_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Submitted_Date__c</fullName>
    <label>Quote Submitted Date</label>
    <type>Date</type>
</CustomField>