mabger-meter/force-app/main/default/objects/Opportunity/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <label>Quoted Price</label>
    <length>25</length>
    <type>Text</type>
</CustomField>