mabger-meter/force-app/main/default/objects/Opportunity/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>Name of record type in a text field. Needed for Inquiry Snapshots Oct 2020, Aaron Linsmeier</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of record type in a text field</inlineHelpText>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>