mabger-meter/force-app/main/default/objects/Opportunity/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <description>Sales Territory field from the Account</description>
    <formula>Text(Account.Sales_Territory__c)</formula>
    <label>Sales Territory</label>
    <type>Text</type>
</CustomField>