mabger-meter/force-app/main/default/objects/Opportunity/fields/Send_to_INDORDERS_badgermeter_com__c.field-meta.xml
<CustomField>
    <fullName>Send_to_INDORDERS_badgermeter_com__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Send opportunity information to INDORDERS To Be Entered inbox.</inlineHelpText>
    <label>Send to INDORDERS@badgermeter.com</label>
    <type>Checkbox</type>
</CustomField>