mabger-meter/force-app/main/default/objects/Opportunity/fields/Send_to_LeadMethod__c.field-meta.xml
<CustomField>
    <fullName>Send_to_LeadMethod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to LeadMethod</label>
    <type>Checkbox</type>
</CustomField>