mabger-meter/force-app/main/default/objects/Opportunity/fields/Send_to_LM_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_to_LM_Date__c</fullName>
    <description>Date the box was checked to Send to LM</description>
    <label>Send to LM Date</label>
    <type>Date</type>
</CustomField>