mabger-meter/force-app/main/default/objects/Opportunity/fields/Send_to_UtilityOrders_badgermeter_com__c.field-meta.xml
<CustomField>
    <fullName>Send_to_UtilityOrders_badgermeter_com__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Send Opportunity details to To Be Entered folder.</inlineHelpText>
    <label>Send to UtilityOrders@badgermeter.com</label>
    <type>Checkbox</type>
</CustomField>