mabger-meter/force-app/main/default/objects/Opportunity/fields/Software_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>Software_Downloaded__c</fullName>
    <description>From Pardot / web form</description>
    <label>Software Downloaded</label>
    <length>200</length>
    <type>Text</type>
</CustomField>