mabger-meter/force-app/main/default/objects/Opportunity/fields/Software_Downloaded_History__c.field-meta.xml
<CustomField>
    <fullName>Software_Downloaded_History__c</fullName>
    <description>Populated at the time the opportunity record is created and may not represent all software downloaded by the individual</description>
    <inlineHelpText>Populated when the opportunity record is created. Might not represent all software downloaded by the individual. See the contact record for a full history of downloads.</inlineHelpText>
    <label>Software Downloaded History</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>