mabger-meter/force-app/main/default/objects/Opportunity/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <inlineHelpText>Please include any special requirements.</inlineHelpText>
    <label>Special Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calibration Services</fullName>
            </value>
            <value>
                <fullName>Extended Warranty</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Maintenance Agreements (Includes Technical Support)</fullName>
            </value>
            <value>
                <fullName>Meter Testing</fullName>
            </value>
            <value>
                <fullName>Mobilization</fullName>
            </value>
            <value>
                <fullName>Nonrecurring engineering</fullName>
            </value>
            <value>
                <fullName>Project Management Fees</fullName>
            </value>
            <value>
                <fullName>Propagation studies</fullName>
            </value>
            <value>
                <fullName>Rebates</fullName>
            </value>
            <value>
                <fullName>Royalties</fullName>
            </value>
            <value>
                <fullName>Service Units</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Variable (Volume Based) Pricing</fullName>
            </value>
            <value>
                <fullName>Turnkey</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>