mabger-meter/force-app/main/default/objects/Opportunity/fields/Special_Requirements_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements_Notes__c</fullName>
    <label>Special Requirements Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>