mabger-meter/force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFP Expected Next 3 Months</fullName>
            </value>
            <value>
                <fullName>In-House – Not Yet Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted – Awaiting Response</fullName>
            </value>
            <value>
                <fullName>Submitted – Short Listed</fullName>
            </value>
            <value>
                <fullName>Awarded – Pending Council Approval</fullName>
            </value>
            <value>
                <fullName>Awarded – In Negotiations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>