mabger-meter/force-app/main/default/objects/Opportunity/fields/Time_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Close__c</fullName>
    <formula>CloseDate -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Close</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>