mabger-meter/force-app/main/default/objects/Opportunity/fields/Turnkey__c.field-meta.xml
<CustomField>
    <fullName>Turnkey__c</fullName>
    <label>Turnkey?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Install Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>