mabger-meter/force-app/main/default/objects/Opportunity/fields/Turnkey_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Turnkey_Completion_Date__c</fullName>
    <label>Turnkey Completion Date</label>
    <type>Date</type>
</CustomField>