mabger-meter/force-app/main/default/objects/Opportunity/fields/Waiting_on_Integration__c.field-meta.xml
<CustomField>
    <fullName>Waiting_on_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiting on Integration</label>
    <type>Checkbox</type>
</CustomField>