mabger-meter/force-app/main/default/objects/Opportunity/fields/Waiting_on_Integration_Date__c.field-meta.xml
<CustomField>
    <fullName>Waiting_on_Integration_Date__c</fullName>
    <label>Waiting on Integration Since</label>
    <type>Date</type>
</CustomField>