mabger-meter/force-app/main/default/objects/Opportunity/fields/Win_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Reason__c</fullName>
    <label>Win/Loss Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Availability and/or lead time</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Strategic Supplier</fullName>
            </value>
            <value>
                <fullName>No bid</fullName>
            </value>
            <value>
                <fullName>Customer Canceled Bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>