mabger-meter/force-app/main/default/objects/Opportunity/fields/Working_Inquiry_Internally__c.field-meta.xml
<CustomField>
    <fullName>Working_Inquiry_Internally__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field to assist with the rollout of new lead process October 2020.</description>
    <label>Working Inquiry Internally</label>
    <type>Checkbox</type>
</CustomField>