mabger-meter/force-app/main/default/objects/Opportunity/fields/X3rd_Party_Products_or_Content__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Products_or_Content__c</fullName>
    <label>3rd Party Products or Content</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>