mabger-meter/force-app/main/default/objects/Opportunity/recordTypes/Case_Credit.recordType-meta.xml
<RecordType>
    <fullName>Case_Credit</fullName>
    <active>true</active>
    <businessProcess>Badger Opportunity</businessProcess>
    <label>Case - Credit</label>
</RecordType>