mabger-meter/force-app/main/default/objects/Opportunity/recordTypes/Case_Order.recordType-meta.xml
<RecordType>
    <fullName>Case_Order</fullName>
    <active>true</active>
    <businessProcess>Badger Opportunity</businessProcess>
    <label>Case - Order</label>
</RecordType>