mabger-meter/force-app/main/default/objects/Opportunity/recordTypes/Flow_Instrumentation.recordType-meta.xml
<RecordType>
    <fullName>Flow_Instrumentation</fullName>
    <active>true</active>
    <businessProcess>Badger Opportunity</businessProcess>
    <label>Flow Instrumentation</label>
</RecordType>