mabger-meter/force-app/main/default/objects/Opportunity/recordTypes/International.recordType-meta.xml
<RecordType>
    <fullName>International</fullName>
    <active>true</active>
    <businessProcess>Badger Opportunity</businessProcess>
    <label>International</label>
</RecordType>