mabger-meter/force-app/main/default/objects/Opportunity/recordTypes/Mexico_Latin_America.recordType-meta.xml
<RecordType>
    <fullName>Mexico_Latin_America</fullName>
    <active>true</active>
    <businessProcess>Badger Opportunity</businessProcess>
    <label>Mexico-Latin America</label>
</RecordType>