mabger-meter/force-app/main/default/objects/Opportunity/recordTypes/Standard_Bid.recordType-meta.xml
<RecordType>
    <fullName>Standard_Bid</fullName>
    <active>true</active>
    <businessProcess>Badger Opportunity</businessProcess>
    <label>Standard Bid</label>
</RecordType>