mabger-meter/force-app/main/default/objects/Opportunity/recordTypes/Utility.recordType-meta.xml
<RecordType>
    <fullName>Utility</fullName>
    <active>true</active>
    <businessProcess>Badger Opportunity</businessProcess>
    <label>Utility</label>
</RecordType>