mabger-meter/force-app/main/default/objects/Opportunity/listViews/Active_Opps_FI_MgmtReport.listView-meta.xml
<ListView>
    <fullName>Active_Opps_FI_MgmtReport</fullName>
    <columns>Market__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Application_Description__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Product__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Original_Value__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Opportunity,Quote/Bid,Negotiation/Review</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Market__c</field>
        <operation>notEqual</operation>
        <value>Utility CSR,Utility Direct,Water Distribution</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Flow_Instrumentation</value>
    </filters>
    <label>Active_Opps_FI_MgmtReport</label>
    <sharedTo>
        <group>FI_Marketing_Group</group>
        <role>Flow_Account_Manager</role>
        <role>Sales_Director_Flow</role>
    </sharedTo>
</ListView>